...

    @EnvironmentObject
    var purchaseService: PurchaseService

    var body: some View {
        VStack(spacing: 0) {
            List() {
                ForEach(viewModel.currencies) { currency in
                    CurrencyRow(
                        currency: currency,
                        type: .base
                    )
                }
...
