...
        }
        .hideScrollIndicators()
        .searchable(text: $viewModel.searchText)
        .listStyle(.insetGrouped)
        .task {
            await viewModel.loadData()
        }.navigationTitle("Currencies List")
    }
}

struct CurrenciesList_Previews: PreviewProvider {
    static var previews: some View {
        NavigationView {
...
